--- a/styles/style.scss
+++ b/styles/style.scss
@@ -8,9 +8,74 @@
 
 body {
     font-family: "Red Hat Text", sans-serif;
-    background-color: #FCF8F5;
+    background-color: #FCF8F6;
 }
 
+
 .container {
-    max-width: 1110px;
+    max-width: 1170px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding: 88px 0px;
+}
+
+.hero-inner {
+    display: flex;
+    gap: 32px;
+}
+.menu-item-container {
+    h1 {
+        color: #260F08;
+        text-align: left;
+        font-weight: 700;
+        font-size: 40px;
+        }
+    }
+
+
+.hero-grid {
+    display: grid;
+    grid-template-rows: 275px 275px 275px;
+    grid-template-columns: 250px 250px 250px;
+    gap: 24px 32px;
+    .product {
+        display: flex;
+        flex-direction: column;
+        button {
+            margin-top: -25px;
+            margin-bottom: 16px;
+            width: fit-content;
+            padding: 12px 28px;
+            background-color: white;
+            border: 1px solid #C73B0F;
+            border-radius: 48px;
+            font-family: "Red Hat Text", sans-serif;
+            font-size: 14px;
+            font-weight: 600;
+            cursor: pointer;  
+        }
+        img {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 10px;
+        }
+        h2 {
+            color: #87635A;
+            font-size: 14px;
+            font-weight: 300;
+        }
+        h1 {
+            color: #260F08;
+            font-size: 16px;
+            font-weight: 600;
+        }
+        p {
+            color: #C73B0F;
+            font-size: 16px;
+            font-weight: 400;
+        }
+    }
 }
