--- a/styles/style.css
+++ b/styles/style.css
@@ -11,9 +11,9 @@ body {
 }
 
 .container {
-  max-width: 1170px;
+  max-width: 1216px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   margin: 0 auto;
   padding: 88px 0px;
@@ -21,9 +21,13 @@ body {
 
 .hero-inner {
   display: flex;
+  justify-content: space-between;
   gap: 32px;
 }
 
+.menu-item-container {
+  width: 800px;
+}
 .menu-item-container h1 {
   color: #260F08;
   text-align: left;
@@ -33,9 +37,10 @@ body {
 
 .hero-grid {
   display: grid;
-  grid-template-rows: 275px 275px 275px;
-  grid-template-columns: 250px 250px 250px;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 225px 225px 225px;
   gap: 24px 32px;
+  width: 70%;
 }
 .hero-grid .product {
   display: flex;
@@ -76,4 +81,34 @@ body {
   color: #C73B0F;
   font-size: 16px;
   font-weight: 400;
+}
+.hero-grid .product p::before {
+  content: "$";
+}
+
+.sidebar {
+  background-color: white;
+  width: 384px;
+  padding: 24px;
+  border-radius: 10px;
+  text-align: center;
+}
+.sidebar .head {
+  color: #C73B0F;
+  font-size: 30px;
+  font-weight: 700;
+  text-align: left;
+}
+.sidebar .foot {
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid black;
+}
+.sidebar .cartItem {
+  padding: 20px 0px;
+}
+.sidebar .cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }/*# sourceMappingURL=style.css.map */
