--- a/styles/style.scss
+++ b/styles/style.scss
@@ -56,7 +56,15 @@ body {
             font-family: "Red Hat Text", sans-serif;
             font-size: 14px;
             font-weight: 600;
-            cursor: pointer;  
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 14px;
+            cursor: pointer; 
+        }
+        button.add-to-cart::before {
+            content: url('/assets/images/icon-add-to-cart.svg');
+            margin-bottom: -4px;
         }
         img {
             width: 100%;
@@ -149,6 +157,26 @@ body {
 
 .product {
     margin-bottom: 20px;
+    .button-add-to-cart {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    h1 {
+        text-align: left;
+    }
+}
+
+.delElement {
+    background-color: transparent;
+    border-radius: 50%;
+    border: 1px solid #AD8A85;
+    color: #AD8A85;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 14px;
 }
 
 .cart-item {
